updated gallery dec.

--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -7,7 +7,14 @@ author_profile: true
 
 {% include base_path %}
 
-<p>I have developed an interest in Pixel Art lately, and it turns out I'm pretty decent at it. I use  <a href="https://www.aseprite.org/">Aseprite</a> which used to be FOSS till 2016, but is currently a paid (but open-source) software. It can built locally from the source, by following  <a href="https://www.reddit.com/r/PixelArt/comments/on9pw6/guide_how_to_build_aseprite_from_source_aseprite/ ">these</a> instructions. Below are some of the things I've made.</p>
+<p>Occasionally, I dabble in some creativity to take a break from my work. So far I've tried out the following:</p>
+<ul>
+  <li><b>Pixel Art</b>: I use  <a href="https://www.aseprite.org/">Aseprite</a> which used to be FOSS till 2016, but is currently a paid (but open-source) software. It can built locally from the source, by following  <a href="https://www.reddit.com/r/PixelArt/comments/on9pw6/guide_how_to_build_aseprite_from_source_aseprite/ ">these</a> instructions.</li>
+  <li><b>3D Modelling</b>: I use <a href="https://www.blender.org/">Blender</a> sometimes to create 3D models of random stuff.</li>
+  <li><b>Game Development</b>: I've always wanted to try my hand at this, and so far I've made some simple games using Python and Julia. I'm currently trying some things out with <a href="https://godotengine.org/">Godot</a>, an open source game engine.</li>
+</ul>  
+
+<p>Below are some of the things I've made over the last few years.</p>
 
 <hr style="text-align:left;margin-left:0;border-top:2px solid #6b7278"> 
 <ul>
