--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -7,7 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
-Occasionally, I dabble in some creativity to take a break from my work. I imagine that somwhere out there, there is a
+Occasionally, I dabble in some creativity to take a break from my work. I imagine that somewhere out there, there is a
 version of me who did indeed choose a more creative career path :) Below are some of the things I've made over the last
 few years.
 
